addons/contour/gatewayclass.yaml
kind: GatewayClass
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: contour-gatewayclass
spec:
  controllerName: projectcontour.io/gateway-controller
